k8s/lh-mock-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: lh-mock-service
spec:
  type: NodePort
  selector:
    component: lh-mock
  ports:
    - port: 8080
      nodePort: 31002
      targetPort: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lh-mock-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: lh-mock
  template:
    metadata:
      labels:
        component: lh-mock
    spec:
      containers:
        - name: lh-mock
          image: shaharbm/lh-mock:0.0.2
          ports:
            - containerPort: 8080
