k8s/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: lh-mysql
  labels:
    app: lh
spec:
  ports:
    - port: 3306
  selector:
    app: lh
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: lh-mysql
  labels:
    app: lh
spec:
  selector:
    matchLabels:
      app: lh
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lh
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
